--- a/authentication/src/main/resources/application.properties
+++ b/authentication/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=authentication
-server.port=7001
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+server.port=7200
+eureka.client.service-url.defaultZone=http://localhost:7100/eureka
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/authentication?allowPublicKeyRetrieval=true&useSSL=false
