--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
 		<authentication.version>1.1.1</authentication.version>
 		<namingserver.version>1.1.1</namingserver.version>
-		<AppRunner.version>1.1.1</AppRunner.version>
+		<apprunner.version>1.1.1</apprunner.version>
 		<apigateway.version>1.1.1</apigateway.version>
 	</properties>
 </project>
