--- a/ApiGateway/.project
+++ b/ApiGateway/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>apigateway</name>
+	<name>ApiGateway</name>
 	<comment></comment>
 	<projects>
 	</projects>
