--- a/ApiGateway/pom.xml
+++ b/ApiGateway/pom.xml
@@ -3,15 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>Inventory_Management</groupId>
-		<artifactId>Inventory_Management</artifactId>
-		<version>1.0.0</version>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.7.9</version>
+		<relativePath />
 	</parent>
+	<version>3.1.1</version>
 	<artifactId>apigateway</artifactId>
-
-	<version>${apigateway.version}</version>
-	<groupId>com.apigateway</groupId>
-	<name>apigateway</name>
+	<groupId>com.ApiGateway</groupId>
+	<name>ApiGateway</name>
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2021.0.1</spring-cloud.version>
@@ -57,6 +57,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<name>multiapp-${project.artifactId}:${project.version}</name>
+					</image>
+					<pullPolicy>IF_NOT_PRESENT</pullPolicy>					
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
