--- a/ApiGateway/bin/src/main/resources/application.properties
+++ b/ApiGateway/bin/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
-spring.application.name=bapi-gateway
-server.port=8765
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=api-gateway
+server.port=7000
+eureka.client.serviceUrl.defaultZone=http://localhost:7100/eureka
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
