--- a/ApiGateway/pom.xml
+++ b/ApiGateway/pom.xml
@@ -63,7 +63,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>multiapp-${project.artifactId}:${project.version}</name>
+						<name>inventory-${project.artifactId}:${project.version}</name>
 					</image>
 					<pullPolicy>IF_NOT_PRESENT</pullPolicy>					
 				</configuration>
