--- a/inventory_manager/pom.xml
+++ b/inventory_manager/pom.xml
@@ -7,15 +7,16 @@
 		<artifactId>Inventory_Management</artifactId>
 		<version>1.0.0</version>
 	</parent>
-	<artifactId>namingserver</artifactId>
+	<groupId>inventory_manager</groupId>
+	<artifactId>inventory_manager</artifactId>
+	<name>inventory_manager</name>
+	<description>inventory_manager</description>
+	<version>${inventory_manger.version}</version>
 
-	<groupId>com.namingserver</groupId>
-	<name>namingserver</name>
-	<version>${namingserver.version}</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,8 +52,24 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.9</version>
+		</dependency>
+
 
 	</dependencies>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -77,7 +94,7 @@
 					<image>
 						<name>inventory-${project.artifactId}:${project.version}</name>
 					</image>
-					<pullPolicy>IF_NOT_PRESENT</pullPolicy>					
+					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
 				</configuration>
 			</plugin>
 		</plugins>
