--- a/Util/pom.xml
+++ b/Util/pom.xml
@@ -8,6 +8,7 @@
 		<version>1.0.0</version>
 	</parent>
 	<artifactId>Util</artifactId>
+	<version>1.0.0</version>
 
 	<dependencies>
 		<dependency>
@@ -29,7 +30,12 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.0.0-M5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 </project>
