--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<module>ApiGateway</module>
 		<module>inventory_manager</module>
 		<module>Util</module>
+		<module>inventory_notifications</module>
 	</modules>
 
 	<properties>		
@@ -35,6 +36,6 @@
 		<authentication.version>3.1.1</authentication.version>
 		<apprunner.version>4.1.1</apprunner.version>
 		<inventory_manger.version>5.1.1</inventory_manger.version>
-		
+		<inventory_notifications.version>6.1.1</inventory_notifications.version>
 	</properties>
 </project>
