--- a/inventory_manager/pom.xml
+++ b/inventory_manager/pom.xml
@@ -65,6 +65,11 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>Inventory_Management</groupId>
+			<artifactId>Util</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
