--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -9,4 +9,4 @@ eureka.instance.hostname=localhost
 spring.cloud.discovery.enabled=true
 
 
-multiapp.authentication_service_url=http://localhost:7200
+inventory.authentication_service_url=http://localhost:7200
